# python_machine_learning_beginner

./: README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
