[tool.poetry]
name = "python_machine_learning_beginner"
version = "0.1.0"
description = ""
authors = ["JoseGuevara01 <jose.urquiza.guevara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
